--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
         <item>Pounds</item>
         <item>Bags</item>
     </string-array>
+    <string name="how_much_do_you_want_to_pickup">How much would you like to pick up?</string>
+    <string name="the_restaurant_has">The restaraunt has</string>
+    <string name="reserve_food">Reserve Food</string>
 </resources>
