--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="return_to_map">Return to Map</string>
     <string name="hours_remaining">Hours Remaining:</string>
     <string name="remaining_food">Remaining Food:</string>
+    <string name="reserved_food">Reserved Food</string>
 </resources>
