--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Food-app</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Recyclr</string>
+    <string name="title_activity_maps">Recyclr</string>
     <string name="login">Login</string>
     <string name="publish_location">Publish Location</string>
     <string name="clear_map">Clear Map</string>
